<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="page_title">Music Player</string>
    <string name="search">Search</string>
    <string name="more">Settings</string>
    <string name="scan">Scan</string>
    <string name="directory">Directory</string>
    <string name="get_dir_path">GET DIR PATH</string>
    <string name="home">Home</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="scan_button">scan-button</string>
    <string name="preference_file">com.sirhadrian.music-player.file</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="preference_key">com.sirhadrian.music-player.key</string>
    <string name="songs_key_serial">com.sirhadrian.music-player.songs</string>
    <string name="channel_name">notifiychanngel</string>
    <string name="channel_description">music notifffication</string>
    <string name="art_place_holder">Art place holder</string>
    <string name="song_title_here">Song Title</string>
    <string name="song_artwork">Song Artwork</string>
    <string name="preview_button">Preview Button</string>
    <string name="pause_or_play_button">Pause or Play Button</string>
    <string name="next_button">Next Button</string>
    <string name="start_position">00:00</string>
    <string name="blur_background_for_detail_view">blur background for detail view</string>
    <string name="artist_name_here">Artist Name</string>
    <string name="background_for_individual_item">Background for individual item</string>
    <string name="shuffle_button">Shuffle button</string>
    <string name="action_switch">action switch</string>
    <string name="settings_fragment">Settings fragment</string>
    <string name="scan_directory">ScanDirectory</string>
    <string name="shuffle_the_list_of_songs">Shuffle the list of songs</string>
    <string name="shuffle">Shuffle</string>
    <string name="search_for_song">Search for song</string>

</resources>