<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/search_actionbar"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/shuffle_actionbar"
        android:title="@string/shuffle"
        android:icon="@drawable/ic_baseline_shuffle_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings_actionbar"
        android:title="@string/more"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom" />

</menu>